test/expected/explain_pmri.out
explain int& C::*x
             ^
14: error: pointer-to-member is not supported in C
